# pabOnICP

./: Cargo.toml  Makefile  README.md  deploy.sh  dfx.json  package-lock.json  package.json  rust-toolchain.toml  rustc-ice-2024-10-03T18_24_29-33155.txt  rustc-ice-2024-10-03T18_24_29-33156.txt  rustc-ice-2024-10-04T19_24_31-82399.txt  rustc-ice-2024-10-04T19_24_31-82400.txt
src/agent/: Cargo.toml
src/agent/src/: lib.rs
src/agent/src/bank/: mod.rs  simple_transactions.rs
src/agent/src/runner/: mod.rs
src/agent/src/smith/: mod.rs
src/battery/: Cargo.toml
src/battery/src/: lib.rs
src/battery/src/id/: identity.rs  mod.rs
src/battery/src/reverie/: memory.rs  mod.rs
src/battery/src/runner/: mod.rs
src/framework/: Cargo.toml
src/framework/src/: lib.rs
src/framework/src/dao/: crawler.rs  http.rs  mod.rs  personality.rs  sqlite.rs
src/framework/src/mqtt/: mod.rs  publish.rs  subscriber.rs
src/framework/src/prompt/: gen.rs  mod.rs
src/framework/src/service/: llmchat.rs  metapowermatrix_agent.rs  metapowermatrix_controller.rs
src/matrix/: Cargo.toml
src/matrix/src/: lib.rs
src/matrix/src/architect/: mod.rs
src/matrix/src/controller/: mod.rs
src/matrix/src/runner/: mod.rs
src/pabOnICP_backend/: Cargo.toml
src/pabOnICP_backend/src/: lib.rs
src/pabOnICP_frontend/: package.json
src/pabOnICP_frontend/src/: App.jsx
