[package]
name = "agent_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
metapower_framework = { path = "../framework" }
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.13.2"
ic-stable-structures = "0.6.5"
ic-wasi-polyfill = "0.5.0"
async-trait = "0.1.53"
anyhow = "1.0.38"
notify = "6.0.1"
rand_chacha = "0.3.1"
rand = "0.8.5"
serde = "1.0.111"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "3.1.0"
serde_json = "1.0.79"
md5 = "0.7.0"
hex = "0.4.3"
eyre = "0.6.8"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
clap_derive = { version = "4.0.0-rc.1" }
clap = { version = "4.5.1", features = ["derive"] }
sha1 = "0.10.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
