[package]
name = "agent_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
metapower_framework = { path = "../framework" }
candid = "0.10.10"
ic-cdk = "0.16.0"
ic-cdk-timers = "0.10.0" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.16.0"
ic-stable-structures = "0.6.5"
anyhow = "1.0.89"
notify = "6.1.1"
serde = "1.0.210"
serde_cbor = "0.11.2"
serde_bytes = "0.11.15"
serde_with = "3.9.0"
serde_json = "1.0.128"
md5 = "0.7.0"
hex = "0.4.3"
eyre = "0.6.12"
sha1 = "0.10.6"
