[package]
name = "metapower_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.111"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "3.6.1"
serde_json = "1.0.79"
tonic = "0.11.0"
tokio = { version = "1.20", features = ["full"] }
prost = "0.12.3"
chrono = "0.4.19"
memcache = "0.17.0"
anyhow = "1.0.38"
ic-sqlite = "0.1.0"
rusqlite-ic = "0.28.1"
# rusqlite = "0.31.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
daemonize = "0.5.0"
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
reqwest = { version = "0.12.3", features = ["json"] }
tokio-util = { version = "0.7.10", features = ["io"] }
futures-util = "0.3.30"
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.11.0"