[package]
name = "metapower_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.111"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "3.6.1"
serde_json = "1.0.79"
chrono = { version = "0.4.19", default-features = false,  features = ["std"] }
anyhow = "1.0.38"
ic-sqlite = "0.1.0"
rusqlite-ic = "0.28.1"
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13.2"
tokio-util = { version = "0.7.10", features = ["io"] }
futures-util = "0.3.30"
futures = "0.3.30"
ic-canister-log = "0.2.0"