[package]
name = "metapower_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.210"
serde_cbor = "0.11.2"
serde_bytes = "0.11.15"
serde_with = "3.9.0"
serde_json = "1.0.128"
# chrono = { version = "0.4.19", default-features = false , features = ["std"]}
anyhow = "1.0.89"
ic-sqlite = "0.1.0"
rusqlite-ic = "0.28.1"
candid = "0.10.10"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
tokio-util = { version = "0.7.12", features = ["io"] }
futures-util = "0.3.30"
futures = "0.3.30"
ic-canister-log = "0.2.0"
serde_qs = "0.13.0"