[package]
name = "matrix_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
metapower_framework = { path = "../framework" }
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.13.2"
ic-stable-structures = "0.6.5"
serde = "1.0.111"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "3.2.0"
serde_json = "1.0.79"
anyhow = "1.0.38"
libc = "0.2.153"
rand = "0.8.5"
sysinfo = "0.30.7"
infer = "0.16.0"
md5 = "0.7.0"
ciborium = "0.2.2"