[package]
name = "matrix_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
metapower_framework = { path = "../framework" }
candid = "0.10.10"
ic-cdk = "0.16.0"
ic-cdk-timers = "0.10.0"
ic-cdk-macros = "0.16.0"
ic-stable-structures = "0.6.5"
serde = "1.0.210"
serde_cbor = "0.11.2"
serde_bytes = "0.11.15"
serde_with = "3.9.0"
serde_json = "1.0.128"
anyhow = "1.0.89"
libc = "0.2.159"
sysinfo = "0.31.4"
infer = "0.16.0"
md5 = "0.7.0"
ciborium = "0.2.2"